--- a/package.json
+++ b/package.json
@@ -1,8 +1,39 @@
 {
   "name": "backend-basics",
   "devDependencies": {
+    "@darraghor/eslint-plugin-nestjs-typed": "^4.6.0",
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/swagger": "^7.3.0",
+    "@nestjs/testing": "^9.0.0",
     "@nx/nest": "^18.0.4",
-    "nx": "18.0.4"
+    "@nx/webpack": "^18.0.4",
+    "@types/express": "^4.17.13",
+    "@types/jest": "29.5.1",
+    "@types/node": "18.16.12",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^6",
+    "@typescript-eslint/parser": "^6",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint": "^8.0.1",
+    "jest": "29.5.0",
+    "nx": "18.0.4",
+    "prettier": "^2.3.2",
+    "source-map-support": "^0.5.20",
+    "supertest": "^6.1.3",
+    "ts-jest": "29.1.0",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@nestjs/common": "^9.4.3",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.2.0"
   },
   "nx": {
     "targets": {}
