--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,10 +8,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es2015",
+    "target": "ES2022",
     "module": "esnext",
     "noImplicitAny": true,
-    "lib": ["es2017", "dom", "ES2021.String"],
+    "lib": ["ES2022", "DOM"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
