--- a/apps/api/tsconfig.app.json
+++ b/apps/api/tsconfig.app.json
@@ -5,8 +5,8 @@
     "module": "commonjs",
     "emitDecoratorMetadata": true,
     "types": ["node"],
-    "lib": ["es2022"],
-    "target": "es2021"
+    "lib": ["ES2022", "DOM"],
+    "target": "ES2022"
   },
   "exclude": ["test/**", "jest.config.ts", "src/**/*.*spec.ts", "src/**/*.*test.ts"],
   "include": ["src/**/*.ts"]
