--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "lib": ["es2022"]
+    "lib": [
+      "ES2022"
+    ]
   },
   "files": [],
   "include": [],
