--- a/apps/api/tsconfig.spec.json
+++ b/apps/api/tsconfig.spec.json
@@ -6,7 +6,7 @@
     "types": ["jest", "node"],
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
-    "lib": ["es2022"]
+    "lib": ["ES2022"]
   },
-  "include": ["jest.config.ts", "src/**/*.ts", "test/**/*.ts", "test/**/*.d.ts"]
+  "include": ["jest.config.ts", "src/**/*.spec.ts"],
 }
